Added tests for null order and sort order