@@ -27,6 +27,7 @@ import org.elasticsearch.core.Tuple;
 import org.hamcrest.Matcher;
 
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.LongStream;
 
@@ -102,15 +103,22 @@ public class HashAggregationOperatorTests extends ForkingOperatorTestCase {
     }
 
     public void testTopNNullsLast() {
+        boolean ascOrder = randomBoolean();
+        var groups = new Long[] { 0L, 10L, 20L, 30L, 40L, 50L };
+        if (ascOrder) {
+            Arrays.sort(groups, Comparator.reverseOrder());
+        }
         var mode = AggregatorMode.SINGLE;
+        var groupChannel = 0;
         var aggregatorChannels = List.of(1);
+
         try (
             var operator = new HashAggregationOperator(
                 List.of(
                     new SumLongAggregatorFunctionSupplier().groupingAggregatorFactory(mode, aggregatorChannels),
                     new MaxLongAggregatorFunctionSupplier().groupingAggregatorFactory(mode, aggregatorChannels)
                 ),
-                () -> new LongTopNBlockHash(0, false, false, 3, blockFactory()),
+                () -> new LongTopNBlockHash(groupChannel, ascOrder, false, 3, blockFactory()),
                 driverContext()
             )
         ) {
@@ -118,11 +126,11 @@ public class HashAggregationOperatorTests extends ForkingOperatorTestCase {
                 BlockUtils.fromList(
                     blockFactory(),
                     List.of(
-                        List.of(10L, 2L),
+                        List.of(groups[1], 2L),
                         Arrays.asList(null, 1L),
-                        List.of(20L, 4L),
-                        List.of(30L, 8L),
-                        List.of(30L, 16L)
+                        List.of(groups[2], 4L),
+                        List.of(groups[3], 8L),
+                        List.of(groups[3], 16L)
                     )
                 )
             );
@@ -132,10 +140,10 @@ public class HashAggregationOperatorTests extends ForkingOperatorTestCase {
                 BlockUtils.fromList(
                     blockFactory(),
                     List.of(
-                        List.of(50L, 64L),
-                        List.of(40L, 32L),
-                        List.of(List.of(10L, 50L), 128L),
-                        List.of(0L, 256L),
+                        List.of(groups[5], 64L),
+                        List.of(groups[4], 32L),
+                        List.of(List.of(groups[1], groups[5]), 128L),
+                        List.of(groups[0], 256L),
                         Arrays.asList(null, 512L)
                     )
                 )
@@ -146,19 +154,22 @@ public class HashAggregationOperatorTests extends ForkingOperatorTestCase {
 
             var outputPage = operator.getOutput();
 
-            var groups = (LongBlock) outputPage.getBlock(0);
+            var groupsBlock = (LongBlock) outputPage.getBlock(0);
             var sumBlock = (LongBlock) outputPage.getBlock(1);
             var maxBlock = (LongBlock) outputPage.getBlock(2);
 
-            assertThat(groups.getPositionCount(), equalTo(3));
+            assertThat(groupsBlock.getPositionCount(), equalTo(3));
             assertThat(sumBlock.getPositionCount(), equalTo(3));
             assertThat(maxBlock.getPositionCount(), equalTo(3));
 
-            assertThat(groups.getTotalValueCount(), equalTo(3));
+            assertThat(groupsBlock.getTotalValueCount(), equalTo(3));
             assertThat(sumBlock.getTotalValueCount(), equalTo(3));
             assertThat(maxBlock.getTotalValueCount(), equalTo(3));
 
-            assertThat(BlockTestUtils.valuesAtPositions(groups, 0, 3), equalTo(List.of(List.of(30L), List.of(50L), List.of(40L))));
+            assertThat(
+                BlockTestUtils.valuesAtPositions(groupsBlock, 0, 3),
+                equalTo(List.of(List.of(groups[3]), List.of(groups[5]), List.of(groups[4])))
+            );
             assertThat(BlockTestUtils.valuesAtPositions(sumBlock, 0, 3), equalTo(List.of(List.of(24L), List.of(192L), List.of(32L))));
             assertThat(BlockTestUtils.valuesAtPositions(maxBlock, 0, 3), equalTo(List.of(List.of(16L), List.of(128L), List.of(32L))));
 
@@ -167,58 +178,75 @@ public class HashAggregationOperatorTests extends ForkingOperatorTestCase {
     }
 
     public void testTopNNullsFirst() {
+        boolean ascOrder = randomBoolean();
+        var groups = new Long[] { 0L, 10L, 20L, 30L, 40L, 50L };
+        if (ascOrder) {
+            Arrays.sort(groups, Comparator.reverseOrder());
+        }
         var mode = AggregatorMode.SINGLE;
+        var groupChannel = 0;
         var aggregatorChannels = List.of(1);
+
         try (
             var operator = new HashAggregationOperator(
                 List.of(
                     new SumLongAggregatorFunctionSupplier().groupingAggregatorFactory(mode, aggregatorChannels),
                     new MaxLongAggregatorFunctionSupplier().groupingAggregatorFactory(mode, aggregatorChannels)
                 ),
-                () -> new LongTopNBlockHash(0, false, true, 3, blockFactory()),
+                () -> new LongTopNBlockHash(groupChannel, ascOrder, true, 3, blockFactory()),
                 driverContext()
             )
         ) {
             var page = new Page(
-                BlockUtils.fromList(blockFactory(), List.of(List.of(10L, 2L), List.of(20L, 4L), List.of(30L, 8L), List.of(30L, 16L)))
+                BlockUtils.fromList(
+                    blockFactory(),
+                    List.of(
+                        List.of(groups[1], 2L),
+                        Arrays.asList(null, 1L),
+                        List.of(groups[2], 4L),
+                        List.of(groups[3], 8L),
+                        List.of(groups[3], 16L)
+                    )
+                )
             );
             operator.addInput(page);
-            page.releaseBlocks();
 
             page = new Page(
                 BlockUtils.fromList(
                     blockFactory(),
                     List.of(
-                        List.of(50L, 64L),
-                        List.of(40L, 32L),
-                        List.of(List.of(10L, 50L), 128L),
-                        List.of(0L, 256L)
-
+                        List.of(groups[5], 64L),
+                        List.of(groups[4], 32L),
+                        List.of(List.of(groups[1], groups[5]), 128L),
+                        List.of(groups[0], 256L),
+                        Arrays.asList(null, 512L)
                     )
                 )
             );
             operator.addInput(page);
-            page.releaseBlocks();
 
             operator.finish();
 
             var outputPage = operator.getOutput();
 
-            var groups = (LongBlock) outputPage.getBlock(0);
+            var groupsBlock = (LongBlock) outputPage.getBlock(0);
             var sumBlock = (LongBlock) outputPage.getBlock(1);
             var maxBlock = (LongBlock) outputPage.getBlock(2);
 
-            assertThat(groups.getPositionCount(), equalTo(3));
+            assertThat(groupsBlock.getPositionCount(), equalTo(3));
             assertThat(sumBlock.getPositionCount(), equalTo(3));
             assertThat(maxBlock.getPositionCount(), equalTo(3));
 
-            assertThat(groups.getTotalValueCount(), equalTo(3));
+            assertThat(groupsBlock.getTotalValueCount(), equalTo(2));
             assertThat(sumBlock.getTotalValueCount(), equalTo(3));
             assertThat(maxBlock.getTotalValueCount(), equalTo(3));
 
-            assertThat(BlockTestUtils.valuesAtPositions(groups, 0, 3), equalTo(List.of(List.of(30L), List.of(50L), List.of(40L))));
-            assertThat(BlockTestUtils.valuesAtPositions(sumBlock, 0, 3), equalTo(List.of(List.of(24L), List.of(192L), List.of(32L))));
-            assertThat(BlockTestUtils.valuesAtPositions(maxBlock, 0, 3), equalTo(List.of(List.of(16L), List.of(128L), List.of(32L))));
+            assertThat(
+                BlockTestUtils.valuesAtPositions(groupsBlock, 0, 3),
+                equalTo(Arrays.asList(null, List.of(groups[5]), List.of(groups[4])))
+            );
+            assertThat(BlockTestUtils.valuesAtPositions(sumBlock, 0, 3), equalTo(List.of(List.of(513L), List.of(192L), List.of(32L))));
+            assertThat(BlockTestUtils.valuesAtPositions(maxBlock, 0, 3), equalTo(List.of(List.of(512L), List.of(128L), List.of(32L))));
 
             outputPage.releaseBlocks();
         }
